<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_marginBottom="50dp"
    android:gravity="center"
    android:layout_gravity="top"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/logo_description"
        tools:srcCompat="@drawable/logo_napis" />

    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
        android:id="@+id/searchBarContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@color/searchBarBackground"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:corner_radius="40dp">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/searchbar_text"
            android:textColor="@color/icons"
            android:textCursorDrawable="@null"
            android:autofillHints="no" tools:targetApi="o"
            tools:ignore="LabelFor"
            android:imeOptions="actionSearch"/>

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/searchbutton_description"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:tint="@color/icons"
            app:srcCompat="@drawable/search_image" />


    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

</LinearLayout>