<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".BookActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                    android:layout_width="120dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    app:corner_radius="20dp">

                    <ImageView
                        android:id="@+id/bookViewCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/bookcover_description"
                        android:foregroundGravity="center"
                        android:scaleType="centerCrop"
                        android:src="@drawable/nocover" />
                </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/bookViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/sample_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/bookViewAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/sample_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/bookViewPublisher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:text="@string/sample_text" />

                </LinearLayout>

            </LinearLayout>

            <net.expandable.ExpandableTextView
                android:id="@+id/bookViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/loremipsum"
                app:expand="false"
                app:expand_enabled="true"
                app:collapse_lines="6"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="#a1a1a1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/pageIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/pageicon_description"
                    android:src="@drawable/page_icon"
                    android:tint="@color/icons" />

                <TextView
                    android:id="@+id/pageCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="525"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/star"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/star"
                    android:tint="@color/icons"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/numRatings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/ratings_number"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Dodaj" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="#a1a1a1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bookRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>