<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#ffff">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:toolbarId="@+id/toolbar"
            app:layout_scrollFlags="scroll|enterAlways"
            android:layout_gravity="center">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/SearchbarLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <com.jcminarro.roundkornerlayout.RoundKornerLinearLayout
                        android:id="@+id/searchBarContainer2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/searchBarBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        app:corner_radius="40dp"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/searchBar2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:autofillHints="no"
                            android:background="@null"
                            android:ems="10"
                            android:layout_gravity="start"
                            android:imeOptions="actionSearch"
                            android:inputType="textPersonName"
                            android:text="@string/searchbar_text"
                            android:textColor="@color/icons"
                            android:textCursorDrawable="@null"
                            tools:ignore="LabelFor"
                            tools:targetApi="o"
                            android:layout_weight="1"/>

                        <ImageButton
                            android:id="@+id/searchButton2"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="end"
                            android:background="@null"
                            android:contentDescription="@string/searchbutton_description"
                            android:padding="10dp"
                            android:scaleType="centerCrop"
                            android:tint="@color/icons"
                            app:srcCompat="@drawable/search_image" />
                    </com.jcminarro.roundkornerlayout.RoundKornerLinearLayout>

                    <ImageButton
                        android:id="@+id/filterButton"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:contentDescription="@string/filterbutton_description"
                        android:onClick="showSortMenu"
                        android:padding="7dp"
                        android:scaleType="centerCrop"
                        android:tint="@color/icons"
                        app:srcCompat="@drawable/filter_image" />

                </LinearLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".SearchActivity">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>